# automation-grid-game-design-agent-skill

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT-TRACKING.md  LICENSE  PROJECT-DEVELOPMENT-PHASE-TRACKING.md  PROJECT-detail.md  README.md  SECOND-KNOWLEDGE-BRAIN.md  SKILL.md  progression.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent/: __init__.py  context.py  errors.py  events.py  hooks.py  llm.py  registry.py  router.py  runner.py  schemas.py  skill_handlers.py  state.py  tools.py
assets/: README.md  recipes.json
assets/diagrams/: agent_framework.mmd  harness_flow.mmd
assets/schemas/: analysis.schema.json  evidence.schema.json  knowledge.schema.json  requirements.schema.json  verdict.schema.json
automation_grid/: __init__.py  config.py  engine.py  knowledge.py  logging_utils.py  recipes.py
config/: README.md  __init__.py  default.json  settings.py
references/: README.md  domain_methods.md
references/prompt_templates/: advisor.md  core_analysis.md  evidence_collector.md  gather_requirements.md  knowledge_updater.md  quality_gate.md
scripts/: __init__.py  ingest_knowledge.py  run_harness.py  seed_recipes.py  setup_local.py  validate_skills.py
skills/: main.md  sub-advisor.md  sub-core-analysis.md  sub-evidence-collector.md  sub-gather-requirements.md  sub-knowledge-updater.md
skills/definitions/: advisor.json  core_analysis.json  evidence_collector.json  gather_requirements.json  knowledge_updater.json  quality_gate.json
tests/: TEST_RESULTS.md  conftest.py  test-scenarios.md  test_agent_framework.py  test_automation_engine.py  test_crawl_pipeline.py  test_validate_project.py
tools/: __init__.py  knowledge_updater.py  run_test_scenarios.py  test_knowledge_updater.py  validate_project.py
